--- a/Dockerfile.web
+++ b/Dockerfile.web
@@ -18,40 +18,41 @@ RUN dotnet build "MoneyManager.Web.csproj" -c Release -o /app/build
 FROM build AS publish
 RUN dotnet publish "MoneyManager.Web.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
-# Runtime stage - Blazor WASM uses ASP.NET Core for hosting
-FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS final
-WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
+# Runtime stage - Blazor WASM uses nginx for hosting
+FROM nginx:alpine AS final
+WORKDIR /usr/share/nginx/html
 
-# Install nginx for serving static files
-RUN apt-get update && apt-get install -y nginx
+# Install bash and envsubst for runtime configuration
+RUN apk add --no-cache bash gettext
 
 # Copy published files
-COPY --from=publish /app/publish/wwwroot /usr/share/nginx/html
+COPY --from=publish /app/publish/wwwroot .
 
 # Copy nginx config
-COPY <<EOF /etc/nginx/nginx.conf
-events { }
-http {
-    include /etc/nginx/mime.types;
-    types {
-        application/wasm wasm;
-    }
-    server {
-        listen 8080;
-        location / {
-            root /usr/share/nginx/html;
-            try_files \$uri \$uri/ /index.html =404;
-            add_header Cache-Control "no-cache";
-        }
-        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|wasm|json)$ {
-            root /usr/share/nginx/html;
-            expires 1y;
-            add_header Cache-Control "public, immutable";
-        }
-    }
-}
+COPY nginx.conf /etc/nginx/nginx.conf
+
+# Create startup script
+COPY <<'EOF' /docker-entrypoint.sh
+#!/bin/sh
+set -e
+
+# Default API_URL if not set
+API_URL=${API_URL:-"https://localhost:5001"}
+
+echo "Configuring Blazor with API_URL: $API_URL"
+
+# Update appsettings.Production.json with the actual API URL
+if [ -f /usr/share/nginx/html/appsettings.Production.json ]; then
+    sed -i "s|#{API_URL}#|$API_URL|g" /usr/share/nginx/html/appsettings.Production.json
+    echo "Updated appsettings.Production.json"
+fi
+
+# Start nginx
+exec nginx -g 'daemon off;'
 EOF
 
-CMD ["nginx", "-g", "daemon off;"]
+RUN chmod +x /docker-entrypoint.sh
+
+EXPOSE 8080
+
+ENTRYPOINT ["/docker-entrypoint.sh"]
