--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,10 @@ events {
 http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
+    
+    # Charset UTF-8 para todos os arquivos de texto
+    charset utf-8;
+    charset_types text/html text/xml text/plain text/css application/javascript application/json;
 
     # Adicionar tipo MIME para WebAssembly
     types {
