remoção de dados não usados no appSettings

--- a/src/MoneyManager.Presentation/appsettings.Production.json
+++ b/src/MoneyManager.Presentation/appsettings.Production.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "MongoDB": {
-    "ConnectionString": "${MONGODB_URI}",
-    "DatabaseName": "MoneyManager"
+    "ConnectionString": "",
+    "DatabaseName": ""
   },
   "Jwt": {
     "SecretKey": "${JWT_SECRET_KEY}",
