ajustes e correções do funcionamento do worker

--- a/src/MoneyManager.Worker/appsettings.Production.json
+++ b/src/MoneyManager.Worker/appsettings.Production.json
@@ -15,7 +15,7 @@
     "ExecutionTimeoutMinutes": 5
   },
   "MongoDB": {
-    "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "MoneyManager"
+    "ConnectionString": "",
+    "DatabaseName": ""
   }
 }
