Ajuste de conferência de data em vez de data e hora para cadastro de transações quando forem recorrentes

--- a/railway.worker.toml
+++ b/railway.worker.toml
@@ -1,6 +1,9 @@
 [build]
 builder = "NIXPACKS"
 
+# This config is for the WORKER service
+# Make sure Railway Worker service is configured to use Dockerfile.worker
+
 [build.nixpacksPlan]
 providers = ["dotnet"]
 
