Fase 3 concluída, fase 4.2 concluída

--- a/src/MoneyManager.Worker/appsettings.json
+++ b/src/MoneyManager.Worker/appsettings.json
@@ -11,6 +11,12 @@
     "Minute": 0,
     "LoopDelaySeconds": 30
   },
+  "InvoiceClosureSchedule": {
+    "TimeZoneId": "E. South America Standard Time",
+    "Hour": 0,
+    "Minute": 1,
+    "LoopDelaySeconds": 60
+  },
   "Worker": {
     "ExecutionTimeoutMinutes": 5
   },
