--- a/src/MoneyManager.Application/MoneyManager.Application.csproj
+++ b/src/MoneyManager.Application/MoneyManager.Application.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.9.2" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="10.0.3" />
     <PackageReference Include="MongoDB.Driver" Version="2.25.0" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
   </ItemGroup>
