--- a/src/MoneyManager.Worker/MoneyManager.Worker.csproj
+++ b/src/MoneyManager.Worker/MoneyManager.Worker.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="9.0.12" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.3" />
   </ItemGroup>
 
   <ItemGroup>
